# pref

./: README.md  get_pref_data.sh
analysis/: .gitignore  build_venn.py  main.py  pole_plot.py  read_reports.py  subsets.py
champsim/: .gitignore  CMakeLists.txt  build_champsim.sh  build_output  cache_misses  job_file_ip_stride  manual_trace.cc  raar.cc  run_champsim.sh
champsim/branch/: CMakeLists.txt
champsim/inc/: block.h  builder.h  cache.h  graph.h  instruction.h  instruction.h.gch  set.h.gch  spp_dev.h.gch
champsim/prefetcher/: CMakeLists.txt  bo.h  bo.l2c_pref  container.h  sisb.l2c_pref  sms.h  sms.l2c_pref
champsim/replacement/: CMakeLists.txt
champsim/results_10M/: 600.perlbench_s-210B.champsimtrace.xz-bimodal-no-no-bo-no-lru-1core.txt  620.omnetpp_s-874B.champsimtrace.xz-bimodal-no-no-bo-no-lru-1core.txt
champsim/results_1M/: 620.omnetpp_s-874B.champsimtrace.xz-bimodal-no-no-ip_stride-no-lru-1core.txt
champsim/src/: CMakeLists.txt  builder.cc  cache.cc  graph.cc  main.cc  ooo_cpu.cc
graph-builder/: 600.perlbench_s-210B.champsimtrace.xz  CMakeLists.txt  README.md  champsim.trace.xz  examp.txt  graph.cc  graph.h  instruction.h  main.cpp  manual_trace.cpp  manually_created_trace  ooo_cpu.cpp  ooo_cpu.h  read_trace.cpp  set.h  trace_test.cpp  trace_test_old.cpp
